--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev-vagrant": "concurrently \"node build/dev-server.js\" \"cd backend; vagrant ssh -- -t 'cd backend; php artisan serve'\" --kill-others",
-    "dev": "node build/dev-server.js",
+    "dev": "concurrently \"node build/dev-server.js\" \"php backend/artisan serve'\" --kill-others",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "vagrant" : "cd backend; vagrant ssh -- -t 'cd backend; php artisan serve",
