--- a/package.json
+++ b/package.json
@@ -5,17 +5,14 @@
   "author": "Christophe <ch.ploujoux@gmail.com>",
   "private": true,
   "scripts": {
-    "dev-vagrant": "concurrently \"node build/dev-server.js\" \"cd backend; vagrant ssh -- -t 'cd backend; php artisan serve'\" --kill-others",
-    "dev": "concurrently \"node build/dev-server.js\" \"php backend/artisan serve'\" --kill-others",
-    "start": "node build/dev-server.js",
+    "vagrant": "cd backend; vagrant up",
+    "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "vagrant" : "cd backend; vagrant ssh -- -t 'cd backend; php artisan serve",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
     "coffee-loader": "^0.7.2",
-    "font-awesome": "^4.7.0",
     "jade": "^1.11.0",
     "validator": "^6.1.0",
     "vue": "^2.0.3",
