--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "vagrant": "cd backend; vagrant up",
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "build": "node build/build.js; ./script/move-build",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
