--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
+    "jsontosass-loader": "^0.1.9",
     "node-sass": "^3.10.1",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
